[package]
name = "Chip8Emulator"
version = "0.1.0"
authors = ["Ofek Shiffman <ofeks10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"

[dependencies.sdl2]
version = "0.30"
default-features = false
features = ["gfx"]